@@ -631,6 +631,22 @@ webui.subjectlinks.enable = false
 #
 # webui.html.max-depth-guess = 3
 
+
+#### Sitemap settings #####
+#
+# Comma-separated list of search engine URLs to 'ping' when a new Sitemap has
+# been created.  Include everything except the Sitemap URL itself (which will
+# be URL-encoded and appended to form the actual URL 'pinged').
+#
+sitemap.engineurls = http://www.google.com/webmasters/sitemaps/ping?sitemap=
+
+# Add this to the above parameter if you have an application ID with Yahoo
+# (Replace REPLACE_ME with your application ID)
+# http://search.yahooapis.com/SiteExplorerService/V1/updateNotification?appid=REPLACE_ME&url=
+#
+# No known Sitemap 'ping' URL for MSN/Live search
+
+
 #### Checksum Checker Settings ####
 # Default dispatcher in case none specified
 plugin.single.org.dspace.checker.BitstreamDispatcher=org.dspace.checker.SimpleDispatcher
