@@ -4,3 +4,4 @@ Disallow: /browse-author
 Disallow: /items-by-author
 Disallow: /browse-date
 Disallow: /browse-subject
+Disallow: /browse-title
